--Footer: spacing now correct. --Undertitle: okay. --Centerbox: okay. --Next   --Finish template: FB part is shifted. Fix.

--- a/style.css
+++ b/style.css
@@ -215,12 +215,6 @@ small {
 big {
 	font-size: 125%;
 }
-footer {
-	font-size: x-small;
-	margin: 0 auto;
-	margin-bottom: 10px;
-	text-align: center;
-}
 .site-header {
 	margin-top: 20px;
 }
@@ -247,22 +241,17 @@ body {
 }
 .undertitle {
 	margin-top: 10px;
-/*
-	position: relative;
-*/
-/*
-	position: absolute;
-	top: 220px;
-*/
-	left: -500px;
-	padding-left: 50%;
+	margin-left: auto;
+	margin-right: auto;
+	width: fit-content;
+	width: -webkit-fit-content;
+	width: -moz-fit-content;	
 }
 .centerbox {
 	color: #CCCCCC;
 	background-color: #1b1a1a;
 	width: 980px; 
 	margin: 0 auto; 
-	margin-bottom:10px;
 	margin-left:15px;
 }
 .social {
@@ -272,6 +261,7 @@ body {
 	position:relative;
 	padding:5px;
 }
+/*
 .post {
 	color:#b5b5b5;	
 	padding-top:10px;
@@ -298,6 +288,12 @@ body {
 	top:4px;
 	color:#000;
 	font-size:16px;
+}
+*/
+.site-footer {
+	font-size: x-small;
+	margin: 10px auto;
+	text-align: center;
 }
 
 /*--------------------------------------------------------------
@@ -679,7 +675,9 @@ a:focus {
 .sticky {
 }
 .hentry {
+/*
 	margin: 0 0 1.5em;
+*/
 }
 .byline,
 .updated {
